--- a/src/app/choice/choice.component.html
+++ b/src/app/choice/choice.component.html
@@ -9,10 +9,12 @@
         </label>
     </div>
 
-    <h1 class="title choice-title">Preview</h1>
-    <h3 class="subtitle choice-title">{{ title }}</h3>
-    <span *ngFor="let block of preview" class="{{ block.type }} text">
-        <br *ngIf="block.type === 'new-line'">
-        {{ block.content }}
-    </span>
+    <div class="margin preview border border--color">
+        <h1 class="title choice-title">Preview</h1>
+        <h3 class="subtitle choice-title">{{ title }}</h3>
+        <span *ngFor="let block of preview" class="{{ block.type }} text">
+            <br *ngIf="block.type === 'linebrake'">
+            {{ block.content }}
+        </span>
+    </div>
 </div>
