--- a/src/app/components/choice/choice.component.html
+++ b/src/app/components/choice/choice.component.html
@@ -12,7 +12,7 @@
     <div class="margin preview border border--color">
         <h1 class="title choice-title">Preview</h1>
         <h3 class="subtitle choice-title">{{ title }}</h3>
-        <span *ngFor="let block of preview" class="{{ block.type }} text">
+        <span *ngFor="let block of preview" class="{{ block.type }} text preview-span">
             <br *ngIf="block.type === 'linebrake'">
             {{ block.content }}
         </span>
