--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="content-container">
     <h1 class="title">{{ title }}</h1>
     <nav class="nav-bar margin--ud content-container border">
-        <a routerLink="choice" routerLinkActive="active" class="route text">Choice</a>
-        <a routerLink="hero-create" routerLinkActive="active" class="route text">Create Hero</a>
-        <a routerLink="hero-view" routerLinkActive="active" class="route text">My Hero</a>
+        <a routerLink="choice" routerLinkActive="active" class="route subtitle">Choice</a>
+        <a routerLink="hero-create" routerLinkActive="active" class="route subtitle">Create Hero</a>
+        <a routerLink="hero-view" routerLinkActive="active" class="route subtitle">My Hero</a>
     </nav>
     <router-outlet></router-outlet>
 </div>
