--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
     <h1 class="title">{{ title }}</h1>
-    <nav class="nav-bar margin--ud content-container border">
+    <nav class="nav-bar margin--ud content-container border border--color">
         <a routerLink="choice" routerLinkActive="active" class="route subtitle">Choice</a>
         <a routerLink="hero-create" routerLinkActive="active" class="route subtitle">Create Hero</a>
         <a routerLink="hero-view" routerLinkActive="active" class="route subtitle">My Hero</a>
